infrastructure/node-main/ns-media/base/jellyfin/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
